--- a/mysite/polls/templates/polls/website_index.css
+++ b/mysite/polls/templates/polls/website_index.css
@@ -5,29 +5,23 @@ body {
     padding: 0;
 }
 
-.element-list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+.attribute-table {
+    width: 50%;
+    margin: 50px auto;
+    border-collapse: collapse;
 }
 
-.element {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-    padding: 5px 10px;
+th, td {
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+    text-align: left;
+}
+
+th {
     background-color: #007bff;
     color: #fff;
-    border-radius: 5px;
 }
 
-.attribute {
-    font-weight: bold;
-    margin-right: 10px;
-}
-
-.value {
-    font-style: italic;
+tr:hover {
+    background-color: #f2f2f2;
 }
