--- a/mysite/polls/templates/polls/website_index.html
+++ b/mysite/polls/templates/polls/website_index.html
@@ -1,5 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>body {
+    font-family: Arial, sans-serif;
+    background-color: #f9f9f9;
+    margin: 0;
+    padding: 0;
+}
+
+.attribute-table {
+    width: 50%;
+    margin: 50px auto;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+    text-align: left;
+}
+
+th {
+    background-color: #a448fa;
+    color: #fff;
+}
+
+td {
+    background-color: #a448fa;
+    color: #fff;
+}
+
+tr:hover {
+    background-color: #f2f2f2;
+}
+
+.poll-form {
+    width: 300px;
+    margin: 50px auto;
+}
+
+.submit-button {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #48e2fa;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+}
+
+
+</style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,16 +64,21 @@
     {% if websites %}
         {% for website in websites %} 
 
-        <div class="element-list">
-            <div class="element">
-                <span class="attribute">Link:</span>
-                <span class="value">website.link</span>
-            </div>
-            <div class="element">
-                <span class="attribute">RegEx:</span>
-                <span class="value">website.regex</span>
-            </div>
-        </div>
+        <table class="attribute-table">
+            <tr>
+                <th>Link:</th>
+                <th>{{website.link}}</th>
+            </tr>
+            <tr>
+                <td>RegEx:</td>
+                <td>{{website.regex}}</td>
+            </tr>
+        </table>
+
+        <form action="{% url 'polls:website_read' website.id %}" method="post" class="poll-form">
+            {% csrf_token %}
+            <input type="submit" value="Auslesen" class="submit-button">
+        </form>
 
         {% endfor %}
     {% else %}
