--- a/mysite/polls/templates/polls/website_index.html
+++ b/mysite/polls/templates/polls/website_index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<style>body {
+<style>
+
+body {
     font-family: Arial, sans-serif;
     background-color: #f9f9f9;
     margin: 0;
