--- a/mysite/polls/static/polls/style.css
+++ b/mysite/polls/static/polls/style.css
@@ -45,7 +45,7 @@ nav a {
 }
 
 nav a:hover {
-    color: #----------------------------------------------------------------------------------------------------------------------;
+    color: #EF8A84,
 }
 
 .content {
