--- a/mysite/polls/templates/polls/login.html
+++ b/mysite/polls/templates/polls/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrieren</title>
+    <title>LogIn</title>
     <!--<link rel="stylesheet" href="{%static 'polls/style.css'%}">-->
 
     <style>
@@ -62,13 +62,13 @@
 <body>
     <section class="analysis">
         <div class="center-content">
-            <h2>Registrierung</h2>
+            <h2>LogIn</h2>
         </div>
     </section>
 
     <section class="analysis">
         <div class="center-content">
-            <form action="register/store" method="post">
+            <form action="{% url 'polls:auth'%}" method="post">
 
                 {% csrf_token %}
 
@@ -77,18 +77,15 @@
         
                 <label for="password">Passwort:</label>
                 <input type="password" id="password" name="password" required><br><br>
-        
-                <label for="email">E-Mail:</label>
-                <input type="email" id="email" name="email" required><br><br>
-        
-                <label for="first_name">Vorname:</label>
-                <input type="text" id="first_name" name="first_name" required><br><br>
-        
-                <label for="last_name">Nachname:</label>
-                <input type="text" id="last_name" name="last_name" required><br><br>
-        
-                <input type="submit" value="Registrieren">
+                <input type="submit" value="LogIn">
             </form>
+
+            {% if error %}
+                <p style = "color: rgb(255, 0, 0);">
+                   {{error}}
+                </p>
+            {% endif %}
+
         </div>
     </section>
 </body>
